// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Article /> does not render the article details 1`] = `
.c2 {
  box-shadow: none;
  text-decoration: none;
  font-size: 36px;
  margin: 0;
  font-weight: 700;
}

.c2:hover,
.c2:focus {
  border-bottom: 1px solid undefined;
  outline: none;
}

.c0 {
  margin: 0 0 60px 0;
  font-weight: 400;
}

.c1 {
  margin: 20px 0 0 0;
}

<body>
  <div>
    <article
      class="c0"
      data-testid="article-item"
    >
      <header
        class="c1"
      >
        <a
          class="c2"
          data-testid="article-header-title"
          href="/awesome-article"
          language="en"
        >
          Awesome Article
        </a>
      </header>
    </article>
  </div>
</body>
`;

exports[`<Article /> does not render the article language name 1`] = `
.c2 {
  box-shadow: none;
  text-decoration: none;
  font-size: 36px;
  margin: 0;
  font-weight: 700;
}

.c2:hover,
.c2:focus {
  outline: none;
}

.c0 {
  margin: 0 0 60px 0;
  font-weight: 400;
}

.c1 {
  margin: 20px 0 0 0;
}

<body>
  <div>
    <article
      class="c0"
      data-testid="article-item"
    >
      <header
        class="c1"
      >
        <h2
          class="c2"
          data-testid="article-header-title"
        >
          Awesome Article
        </h2>
      </header>
    </article>
  </div>
</body>
`;

exports[`<Article /> does not render the link 1`] = `
.c2 {
  box-shadow: none;
  text-decoration: none;
  font-size: 36px;
  margin: 0;
  font-weight: 700;
}

.c2:hover,
.c2:focus {
  outline: none;
}

.c0 {
  margin: 0 0 60px 0;
  font-weight: 400;
}

.c1 {
  margin: 20px 0 0 0;
}

<body>
  <div>
    <article
      class="c0"
      data-testid="article-item"
    >
      <header
        class="c1"
      >
        <h2
          class="c2"
          data-testid="article-header-title"
        >
          Awesome Article
        </h2>
      </header>
    </article>
  </div>
</body>
`;

exports[`<Article /> does not render the reading time 1`] = `
.c2 {
  box-shadow: none;
  text-decoration: none;
  font-size: 36px;
  margin: 0;
  font-weight: 700;
}

.c2:hover,
.c2:focus {
  outline: none;
}

.c4 {
  display: flex;
  flex-wrap: wrap;
  padding: 0;
  margin: 0;
}

.c0 {
  margin: 0 0 60px 0;
  font-weight: 400;
}

.c1 {
  margin: 20px 0 0 0;
}

.c3 {
  font-size: 19px;
  margin: 10px 0;
}

<body>
  <div>
    <article
      class="c0"
      data-testid="article-item"
    >
      <header
        class="c1"
      >
        <h2
          class="c2"
          data-testid="article-header-title"
        >
          Awesome Article
        </h2>
        <p
          class="c3"
        >
          18/01/2020
           
           · 
          article.languagePrefix languages.en
        </p>
        <ul
          class="c4"
          data-testid="article-header-tags"
        />
      </header>
    </article>
  </div>
</body>
`;

exports[`<Article /> does not render the tags 1`] = `
.c2 {
  box-shadow: none;
  text-decoration: none;
  font-size: 36px;
  margin: 0;
  font-weight: 700;
}

.c2:hover,
.c2:focus {
  border-bottom: 1px solid undefined;
  outline: none;
}

.c0 {
  margin: 0 0 60px 0;
  font-weight: 400;
}

.c1 {
  margin: 20px 0 0 0;
}

<body>
  <div>
    <article
      class="c0"
      data-testid="article-item"
    >
      <header
        class="c1"
      >
        <a
          class="c2"
          data-testid="article-header-title"
          href="/awesome-article"
          language="pt"
        >
          Awesome Article
        </a>
      </header>
    </article>
  </div>
</body>
`;

exports[`<Article /> renders properly 1`] = `
.c2 {
  box-shadow: none;
  text-decoration: none;
  font-size: 36px;
  margin: 0;
  font-weight: 700;
}

.c2:hover,
.c2:focus {
  border-bottom: 1px solid undefined;
  outline: none;
}

.c4 {
  display: flex;
  flex-wrap: wrap;
  padding: 0;
  margin: 0;
}

.c5 {
  list-style: none;
  padding: 0 10px 0 0;
}

.c6 {
  text-decoration: none;
  box-shadow: none;
  font-size: 16px;
  font-weight: 700;
  text-transform: lowercase;
}

.c6:hover,
.c6:focus {
  border-bottom: 1px solid;
  outline: none;
}

.c0 {
  margin: 0 0 60px 0;
  font-weight: 400;
}

.c1 {
  margin: 20px 0 0 0;
}

.c3 {
  font-size: 19px;
  margin: 10px 0;
}

<body>
  <div>
    <article
      class="c0"
      data-testid="article-item"
    >
      <header
        class="c1"
      >
        <a
          class="c2"
          data-testid="article-header-title"
          href="/awesome-article"
          language="en"
        >
          Awesome Article
        </a>
        <p
          class="c3"
        >
          18/01/2020
           
          · 5 article.minutes article.ofReading
           · 
          article.languagePrefix languages.en
        </p>
        <ul
          class="c4"
          data-testid="article-header-tags"
        >
          <li
            class="c5"
            data-testid="article-header-tag"
          >
            <a
              class="c6"
              href="/tags/jest"
            >
              #jest
            </a>
          </li>
          <li
            class="c5"
            data-testid="article-header-tag"
          >
            <a
              class="c6"
              href="/tags/testing-library"
            >
              #testing-library
            </a>
          </li>
        </ul>
      </header>
    </article>
  </div>
</body>
`;

exports[`<Article /> renders properly the body content 1`] = `
.c2 {
  box-shadow: none;
  text-decoration: none;
  font-size: 36px;
  margin: 0;
  font-weight: 700;
}

.c2:hover,
.c2:focus {
  border-bottom: 1px solid undefined;
  outline: none;
}

.c0 {
  margin: 0 0 60px 0;
  font-weight: 400;
}

.c1 {
  margin: 20px 0 0 0;
}

.c3 {
  line-height: 1.5;
  font-size: 19px;
  margin-top: 10px;
}

.c3 a {
  text-decoration: none;
  border-bottom: 1px solid;
}

.c3 a:hover,
.c3 a:focus {
  border-bottom: 1px solid;
  outline: none;
}

.c3 code {
  background: 40;
  padding: 2px 6px;
  border-radius: 10px;
  font-size: 16px;
}

.c3 blockquote {
  border-left: 5px solid;
  padding-left: 20px;
  margin-left: 0;
}

.c3 img {
  box-shadow: none!important;
}

.c3 h3 {
  font-size: 28px;
}

.c3 table.uses-table {
  width: 100%;
  margin: 40px 0;
}

.c3 table.uses-table td {
  text-align: center;
}

<body>
  <div>
    <article
      class="c0"
      data-testid="article-item"
    >
      <header
        class="c1"
      >
        <a
          class="c2"
          data-testid="article-header-title"
          href="/awesome-article"
          language="pt"
        >
          Awesome Article
        </a>
      </header>
      <section
        class="c3"
      >
        Article as a Children
      </section>
    </article>
  </div>
</body>
`;

exports[`<Article /> renders properly the description 1`] = `
.c2 {
  box-shadow: none;
  text-decoration: none;
  font-size: 36px;
  margin: 0;
  font-weight: 700;
}

.c2:hover,
.c2:focus {
  border-bottom: 1px solid undefined;
  outline: none;
}

.c0 {
  margin: 0 0 60px 0;
  font-weight: 400;
}

.c1 {
  margin: 20px 0 0 0;
}

.c3 {
  line-height: 1.5;
  font-size: 19px;
  margin-top: 10px;
}

.c3 a {
  text-decoration: none;
  border-bottom: 1px solid;
}

.c3 a:hover,
.c3 a:focus {
  border-bottom: 1px solid;
  outline: none;
}

.c3 code {
  background: 40;
  padding: 2px 6px;
  border-radius: 10px;
  font-size: 16px;
}

.c3 blockquote {
  border-left: 5px solid;
  padding-left: 20px;
  margin-left: 0;
}

.c3 img {
  box-shadow: none!important;
}

.c3 h3 {
  font-size: 28px;
}

.c3 table.uses-table {
  width: 100%;
  margin: 40px 0;
}

.c3 table.uses-table td {
  text-align: center;
}

<body>
  <div>
    <article
      class="c0"
      data-testid="article-item"
    >
      <header
        class="c1"
      >
        <a
          class="c2"
          data-testid="article-header-title"
          href="/awesome-article"
          language="pt"
        >
          Awesome Article
        </a>
      </header>
      <section
        class="c3"
      >
        Article as a Children
      </section>
    </article>
  </div>
</body>
`;

exports[`<Article /> renders the article details 1`] = `
.c2 {
  box-shadow: none;
  text-decoration: none;
  font-size: 36px;
  margin: 0;
  font-weight: 700;
}

.c2:hover,
.c2:focus {
  border-bottom: 1px solid undefined;
  outline: none;
}

.c4 {
  display: flex;
  flex-wrap: wrap;
  padding: 0;
  margin: 0;
}

.c5 {
  list-style: none;
  padding: 0 10px 0 0;
}

.c6 {
  text-decoration: none;
  box-shadow: none;
  font-size: 16px;
  font-weight: 700;
  text-transform: lowercase;
}

.c6:hover,
.c6:focus {
  border-bottom: 1px solid;
  outline: none;
}

.c0 {
  margin: 0 0 60px 0;
  font-weight: 400;
}

.c1 {
  margin: 20px 0 0 0;
}

.c3 {
  font-size: 19px;
  margin: 10px 0;
}

<body>
  <div>
    <article
      class="c0"
      data-testid="article-item"
    >
      <header
        class="c1"
      >
        <a
          class="c2"
          data-testid="article-header-title"
          href="/awesome-article"
          language="en"
        >
          Awesome Article
        </a>
        <p
          class="c3"
        >
          18/01/2020
           
          · 5 article.minutes article.ofReading
           · 
          article.languagePrefix languages.en
        </p>
        <ul
          class="c4"
          data-testid="article-header-tags"
        >
          <li
            class="c5"
            data-testid="article-header-tag"
          >
            <a
              class="c6"
              href="/tags/jest"
            >
              #jest
            </a>
          </li>
          <li
            class="c5"
            data-testid="article-header-tag"
          >
            <a
              class="c6"
              href="/tags/testing-library"
            >
              #testing-library
            </a>
          </li>
        </ul>
      </header>
    </article>
  </div>
</body>
`;
